@@ -1,23 +1,23 @@
 <?php
 /*
-* Gallery - a web based photo album viewer and editor
-* Copyright (C) 2000-2007 Bharat Mediratta
-*
-* This program is free software; you can redistribute it and/or modify
-* it under the terms of the GNU General Public License as published by
-* the Free Software Foundation; either version 2 of the License, or (at
-* your option) any later version.
-*
-* This program is distributed in the hope that it will be useful, but
-* WITHOUT ANY WARRANTY; without even the implied warranty of
-* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-* General Public License for more details.
-*
-* You should have received a copy of the GNU General Public License
-* along with this program; if not, write to the Free Software
-* Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA  02110-1301, USA.
-*
-* $Id$
+ * Gallery - a web based photo album viewer and editor
+ * Copyright (C) 2000-2007 Bharat Mediratta
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or (at
+ * your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA  02110-1301, USA.
+ *
+ * $Id$
 */
 ?>
 <script type="text/javascript">
@@ -100,6 +100,11 @@ function setReducedSize() {
 		document.getElementsByName('frameRR').height	= newheight;
 		document.getElementsByName('frameLL').height	= newheight;
 	}
+
+	if (document.getElementById('galleryImageFrame')) {
+		document.getElementById('galleryImageFrame').style.height = newheight + 'px';
+		document.getElementById('galleryImageFrame').style.width  = newwidth  + 'px';
+	}
 }
 
 function sizeChange() {
@@ -114,6 +119,16 @@ function sizeChange() {
 		else {
 			document.getElementById('galleryImage').height	= imageheight;
 			document.getElementById('galleryImage').width	= imagewidth;
+
+			if (document.getElementsByName('frameRR')) {
+				document.getElementsByName('frameRR').height	= imageheight;
+				document.getElementsByName('frameLL').height	= imagewidth;
+			}
+
+			if (document.getElementById('galleryImageFrame')) {
+				document.getElementById('galleryImageFrame').style.height = imageheight + 'px';
+				document.getElementById('galleryImageFrame').style.width  = imagewidth  + 'px';
+			}
 
 			this.full = true;
 		}
